@@ -269,6 +269,21 @@ fi
 AC_SUBST(LIBFTDI_LIBS)
 AC_SUBST(LIBFTDI_CFLAGS)
 
+dnl ######################################################################
+dnl ethlcd support
+dnl ######################################################################
+AC_MSG_CHECKING([if ethlcd support has been enabled]);
+AC_ARG_ENABLE(ethlcd,
+	[AS_HELP_STRING([--disable-ethlcd],[disable ethlcd connection type for HD44780])],
+	[ if test "$enableval" != "no"; then
+		enable_ethlcd=yes
+	fi ],
+	[ enable_ethlcd=yes ]
+)
+AC_MSG_RESULT($enable_ethlcd) 
+
+
+
 dnl Select drivers to build
 LCD_DRIVERS_SELECT
 
